--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "92481ed7-9fb7-40fd-80f2-46fd0f076581"
 authors = ["ST John <st--@users.noreply.github.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
 [compat]
 julia = "1.3"
 
